--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
             <ul>
                 <li><a href="index2.html">Home</a></li>
                 <li><a href="contact2.html">Contact</a></li>
+                <li><a href="portfolio.html">Contact</a></li>
             </ul>
         </nav>
         </header>
